force-app/main/default/objects/R360_Role_Scope__c/R360_Role_Scope__c.object-meta.xml
<CustomObject>
<description>Effective user role, portfolio and organizational scope, including delegation.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSharing>true</enableSharing><externalSharingModel>Private</externalSharingModel><label>Resource 360 Role Scope</label><nameField><displayFormat>SCP-{00000}</displayFormat><label>Scope Number</label><type>AutoNumber</type></nameField><pluralLabel>Resource 360 Role Scopes</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility>
</CustomObject>