force-app/main/default/objects/R360_Role_Scope__c/fields/Active__c.field-meta.xml
<CustomField><fullName>Active__c</fullName><defaultValue>true</defaultValue><label>Active</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>