force-app/main/default/objects/R360_Role_Scope__c/fields/Approval_Reference__c.field-meta.xml
<CustomField><fullName>Approval_Reference__c</fullName><label>Approval Reference</label><length>120</length><trackHistory>true</trackHistory><type>Text</type></CustomField>