force-app/main/default/objects/R360_Role_Scope__c/fields/Assignment_Source__c.field-meta.xml
<CustomField><fullName>Assignment_Source__c</fullName><label>Assignment Source</label><length>80</length><trackHistory>true</trackHistory><type>Text</type></CustomField>