force-app/main/default/objects/R360_Role_Scope__c/fields/Business_Role__c.field-meta.xml
<CustomField><fullName>Business_Role__c</fullName><label>Business Role</label><length>80</length><required>true</required><trackHistory>true</trackHistory><type>Text</type></CustomField>