force-app/main/default/objects/R360_Role_Scope__c/fields/Certified_By__c.field-meta.xml
<CustomField><fullName>Certified_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Certified By</label><referenceTo>User</referenceTo><relationshipLabel>Resource 360 Certified Scopes</relationshipLabel><relationshipName>Resource360_Certified_Scopes</relationshipName><trackHistory>true</trackHistory><type>Lookup</type></CustomField>