force-app/main/default/objects/R360_Role_Scope__c/fields/Delegated_By__c.field-meta.xml
<CustomField><fullName>Delegated_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Delegated By</label><referenceTo>User</referenceTo><relationshipLabel>Resource 360 Delegated Scopes</relationshipLabel><relationshipName>Resource360_Delegated_Scopes</relationshipName><type>Lookup</type></CustomField>