force-app/main/default/objects/R360_Role_Scope__c/fields/Delegation_Reason__c.field-meta.xml
<CustomField><fullName>Delegation_Reason__c</fullName><label>Delegation Reason</label><length>255</length><trackHistory>true</trackHistory><type>Text</type></CustomField>