force-app/main/default/objects/R360_Role_Scope__c/fields/External_Group_Alias__c.field-meta.xml
<CustomField><fullName>External_Group_Alias__c</fullName><label>External Group Alias</label><length>120</length><trackHistory>true</trackHistory><type>Text</type></CustomField>