force-app/main/default/objects/R360_Role_Scope__c/fields/Last_Certified_At__c.field-meta.xml
<CustomField><fullName>Last_Certified_At__c</fullName><label>Last Certified At</label><trackHistory>true</trackHistory><type>DateTime</type></CustomField>