force-app/main/default/objects/R360_Role_Scope__c/fields/Org_Unit_ID__c.field-meta.xml
<CustomField><fullName>Org_Unit_ID__c</fullName><label>Org Unit ID</label><length>80</length><type>Text</type></CustomField>