force-app/main/default/objects/R360_Role_Scope__c/fields/Portfolio_ID__c.field-meta.xml
<CustomField><fullName>Portfolio_ID__c</fullName><label>Portfolio ID</label><length>80</length><type>Text</type></CustomField>