force-app/main/default/objects/R360_Role_Scope__c/fields/Recertification_Due_Date__c.field-meta.xml
<CustomField><fullName>Recertification_Due_Date__c</fullName><description>Next mandatory access recertification date.</description><label>Recertification Due Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>