force-app/main/default/objects/R360_Role_Scope__c/fields/Revoked_At__c.field-meta.xml
<CustomField><fullName>Revoked_At__c</fullName><label>Revoked At</label><trackHistory>true</trackHistory><type>DateTime</type></CustomField>