force-app/main/default/objects/R360_Role_Scope__c/fields/Revoked_By__c.field-meta.xml
<CustomField><fullName>Revoked_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Revoked By</label><referenceTo>User</referenceTo><relationshipLabel>Resource 360 Revoked Scopes</relationshipLabel><relationshipName>Resource360_Revoked_Scopes</relationshipName><trackHistory>true</trackHistory><type>Lookup</type></CustomField>