force-app/main/default/objects/R360_Role_Scope__c/fields/Scope_Key__c.field-meta.xml
<CustomField><fullName>Scope_Key__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Scope Key</label><length>120</length><required>true</required><type>Text</type><unique>true</unique></CustomField>