force-app/main/default/objects/R360_Role_Scope__c/fields/SoD_Conflict__c.field-meta.xml
<CustomField><fullName>SoD_Conflict__c</fullName><defaultValue>false</defaultValue><description>True when the assignment conflicts with the approved segregation matrix.</description><label>SoD Conflict</label><trackHistory>false</trackHistory><type>Checkbox</type></CustomField>