force-app/main/default/objects/R360_Role_Scope__c/fields/SoD_Conflict_Detail__c.field-meta.xml
<CustomField><fullName>SoD_Conflict_Detail__c</fullName><description>Detected segregation conflict and required remediation.</description><label>SoD Conflict Detail</label><length>1000</length><trackHistory>false</trackHistory><type>LongTextArea</type><visibleLines>3</visibleLines></CustomField>