force-app/main/default/objects/R360_Role_Scope__c/fields/User__c.field-meta.xml
<CustomField><fullName>User__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>User</label><referenceTo>User</referenceTo><relationshipLabel>Resource 360 Role Scopes</relationshipLabel><relationshipName>Resource360_Role_Scopes</relationshipName><type>Lookup</type></CustomField>