force-app/main/default/objects/R360_Role_Scope__c/fields/Valid_From__c.field-meta.xml
<CustomField><fullName>Valid_From__c</fullName><label>Valid From</label><required>true</required><trackHistory>true</trackHistory><type>Date</type></CustomField>