force-app/main/default/objects/R360_Role_Scope__c/fields/Valid_To__c.field-meta.xml
<CustomField><fullName>Valid_To__c</fullName><label>Valid To</label><trackHistory>true</trackHistory><type>Date</type></CustomField>