force-app/main/default/objects/R360_Role_Scope__c/validationRules/Scope_Date_Order.validationRule-meta.xml
<ValidationRule><fullName>Scope_Date_Order</fullName><active>true</active><errorConditionFormula>AND(NOT(ISBLANK(Valid_To__c)), Valid_To__c &lt; Valid_From__c)</errorConditionFormula><errorMessage>Valid To must be on or after Valid From.</errorMessage></ValidationRule>