force-app/main/default/objects/R360_Role_Scope__c/validationRules/User_Is_Required.validationRule-meta.xml
<ValidationRule><fullName>User_Is_Required</fullName><active>true</active><errorConditionFormula>ISBLANK(User__c)</errorConditionFormula><errorDisplayField>User__c</errorDisplayField><errorMessage>User is required for an active role scope.</errorMessage></ValidationRule>